--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arena-im/core",
-  "version": "2.6.0-beta.2",
+  "version": "2.6.0-beta.10",
   "description": "Base implementation for all Arena JavaScript SDKs",
   "author": "Arena",
   "license": "ISC",
@@ -18,8 +18,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@arena-im/chat-types": "^2.6.0-beta.2",
-    "@arena-im/config-sdk": "1.0.0",
+    "@arena-im/chat-types": "^2.6.0-beta.10",
+    "@arena-im/config-sdk": "1.0.0-beta.10",
     "firebase": "9.0.2",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
